--- a/02_modal/src/css/style.css
+++ b/02_modal/src/css/style.css
@@ -1,6 +1,11 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
+}
+
+.content {
+  margin: 20px;
 }
 
 .images {
@@ -16,11 +21,11 @@
 
 .overlay {
   display: none;
-  position: absolute;
+  position: fixed; /* これ大事 */
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
   background-color: gray;
   opacity: 0.5;
   z-index: 1;
@@ -36,12 +41,17 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  padding: 20px 40px;
+  padding: 40px 40px;
   z-index: 2;
   background-color: white;
+  max-width: 80vw;
+  max-height: 80vh;
+  overflow-y: auto;
+  overscroll-behavior: contain; /* 山田さんおすすめCSS */
 }
 
 .modal img {
+  width: 100%;
   height: auto;
 }
 
@@ -49,8 +59,31 @@
   display: block;
 }
 
+.modalTitle {
+  margin-top: 8px;
+  font-size: large;
+  font-weight: bold;
+}
+
+.modalDate {
+  margin-top: 4px;
+  font-size: small;
+  color: #646464;
+}
+
+.modalText {
+  margin-top: 8px;
+}
+
 .close {
   display: inline-block;
+  margin-top: 16px;
   padding: 4px 8px;
   border: 1px solid gray;
+}
+
+.divScrollY {
+  margin-top: 40px;
+  height: 800px;
+  background-color: gray;
 }
