--- a/02_modal/src/css/style.css
+++ b/02_modal/src/css/style.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-.content {
+body {
   margin: 20px;
 }
 
@@ -82,8 +82,8 @@
   border: 1px solid gray;
 }
 
-.divScrollY {
+/* .divScrollY {
   margin-top: 40px;
-  height: 800px;
+  height: 2000px;
   background-color: gray;
-}
+} */
