[#1]でかいdivを作る

--- a/02_modal/src/css/style.css
+++ b/02_modal/src/css/style.css
@@ -82,8 +82,8 @@ body {
   border: 1px solid gray;
 }
 
-/* .divScrollY {
+.divScrollY {
   margin-top: 40px;
   height: 2000px;
   background-color: gray;
-} */
+}
