--- a/02_modal/src/css/style.css
+++ b/02_modal/src/css/style.css
@@ -17,8 +17,9 @@ body {
 }
 
 .imageBox img {
-  width: 200px;
-  height: auto;
+  width: calc((100vw - 56px) / 3);
+  height: calc((100vw - 56px) / 3);
+  object-fit: cover;
 }
 
 .modalWrap {
@@ -34,14 +35,10 @@ body {
   display: block;
 }
 
-.overlay.is-active {
-  display: block;
-  position: fixed; /* これ大事 */
-  top: 0;
-  left: 0;
+.overlay {
   width: 100%;
   height: 100%;
-  background-color: gray;
+  background-color: black;
   opacity: 0.5;
 }
 
@@ -50,17 +47,18 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%,-50%);
-  padding: 40px 40px;
+  padding: 40px;
   background-color: white;
   width: 80%;
-  max-height: 80vh;
+  max-height: 90vh;
   overflow-y: auto;
-  overscroll-behavior: contain; /* 山田さんおすすめCSS */
 }
 
 .modalImage {
   width: 100%;
+  max-height: 50vh;
   height: auto;
+  object-fit: contain;
 }
 
 .modalTitle {
@@ -86,10 +84,4 @@ body {
   margin-top: 16px;
   padding: 4px 8px;
   border: 1px solid gray;
-}
-
-.divScrollY {
-  margin-top: 40px;
-  height: 2000px;
-  background-color: gray;
 }
