--- a/02_modal/src/css/style.css
+++ b/02_modal/src/css/style.css
@@ -14,12 +14,14 @@ body {
   display: flex;
   flex-wrap: wrap;
   gap: 8px;
+  list-style: none;
 }
 
 .imageBox img {
-  width: calc((100vw - 56px) / 3);
-  height: calc((100vw - 56px) / 3);
+  width: calc((100vw - 80px) / 3);
+  height: calc((100vw - 80px) / 3);
   object-fit: cover;
+  vertical-align: bottom;
 }
 
 .modalWrap {
@@ -84,4 +86,5 @@ body {
   margin-top: 16px;
   padding: 4px 8px;
   border: 1px solid gray;
+  background-color: white;
 }
