inputと追加ボタンの作成

--- a/03_todoApp/src/css/style.css
+++ b/03_todoApp/src/css/style.css
@@ -3,3 +3,16 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  margin: 40px;
+}
+
+.todoLists {
+  margin-top: 20px;
+  list-style: none;
+}
+
+.todoLists li input {
+  margin-right: 8px;
+}
