--- a/03_todoApp/src/css/style.css
+++ b/03_todoApp/src/css/style.css
@@ -5,26 +5,103 @@
 }
 
 body {
-  margin: 40px;
+  background-color: #cacaca;
+}
+
+.wrapper {
+  width: 100%;
+  max-width: 640px;
+  margin: 0 auto;
+  background-color: #fff;
+}
+
+.header, .footer {
+  height: 52px;
+  background-color: #9ccdfb;
+}
+
+.container {
+  margin-top: 32px;
+  padding-inline: 16px;
+  height: calc(100vh - 146px);
+}
+
+h1 {
+  font-size: 22px;
+}
+
+.addListForm {
+  display: flex;
+  justify-content: space-between;
+  height: 48px;
+  margin-top: 16px;
+}
+
+.addListForm input[type="text"] {
+  border: 1px solid #e9e9e9;
+  padding: 14px 8px;
+  max-width: 180px;
+  height: 100%;
+}
+
+.addListForm input[type="date"] {
+  border: 1px solid #e9e9e9;
+  padding: 14px 8px;
+}
+
+.addListForm button {
+  background-color: #3e6f9c;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  font-size: 12px;
+  font-weight: bold;
+  padding: 14px 8px;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+  min-width: 64px;
 }
 
 .todoListBox {
-  margin-top: 20px;
+  margin-top: 32px;
   list-style: none;
+  height: 80%;
+  overflow-y: auto;
 }
 
-.checkbox {
+.todoList {
+  display: flex;
+  align-items: center;
+  position: relative;
+  margin-top: 12px;
+  padding-right: 48px;
+}
+
+.todoList .checkbox {
   margin-right: 8px;
+  width: 32px;
+  height: 32px;
+  /* border: 2px solid ; */
+  border-radius: 2px;
+  flex-shrink: 0;
+}
+
+.todoList label {
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 1.6;
+  word-break: break-all;
 }
 
 .todoList span {
-  margin-left: 8px;
-  color: rgb(rgb(56, 56, 56));
-  font-size: 0.8rem;
+  margin-left: 16px;
+  color: #808080;
+  font-size: 12px;
+  flex-shrink: 0;
 }
 
 .resetButton {
-  margin-top: 40px;
+  margin-left: 16px;
+  margin-top: 16px;
 }
 
 .finished {
@@ -36,9 +113,33 @@ body {
 }
 
 .overdue {
-  color: red;
+  color: red !important;
 }
 
 .deleteButton {
-  margin-left: 8px;
+  position: absolute;
+  right: 0;
+  border: none;
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+}
+
+.deleteButton::before, .deleteButton::after {
+  position: absolute;
+  width: 24px;
+  height: 4px;
+  content: "";
+  display: block;
+  background-color: #9ccdfb;
+}
+
+.deleteButton::before {
+  transform: rotate(-45deg);
+
+}
+
+.deleteButton::after {
+  transform: rotate(45deg);
 }
