--- a/03_todoApp/src/css/style.css
+++ b/03_todoApp/src/css/style.css
@@ -5,63 +5,75 @@
 }
 
 body {
-  background-color: #cacaca;
+  font-family: "helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
+  color: #333333;
 }
 
 .wrapper {
   width: 100%;
-  max-width: 640px;
-  margin: 0 auto;
-  background-color: #fff;
+  background-color: white;
+  position: relative;
 }
 
 .header {
-  min-height: 52px;
+  height: 52px;
   background-color: #9ccdfb;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
 }
 
 .container {
-  margin-top: 32px;
   padding-inline: 16px;
-  height: calc(100vh - 144px);
+  padding-top: 64px;
+  padding-bottom: 72px;
+  margin-top: 32px;
+  height: 100vh;
 }
 
 .title {
   font-size: 22px;
-  color: #333333;
 }
 
 .addListForm {
   display: flex;
   justify-content: space-between;
   margin-top: 32px;
+  flex-wrap: wrap;
 }
 
 .addListForm__input {
-  width: 100%;
+  width: calc(100% - 64px);
 }
 
-.todoText {
+.addListForm__textbox {
   border: 1px solid #e9e9e9;
   padding: 14px 8px;
-  width: 50%;
-  min-width: 50px;
+  width: calc(100% - 144px);
+  min-width: 100px;
   height: 100%;
 }
 
-.todoText::placeholder {
+.addListForm__textbox::placeholder {
   font-weight: bold;
   color: #646464;
 }
 
-.todoDue {
+.addListForm__label {
+  font-size: 14px;
+  margin-left: 4px;
+}
+
+.addListForm__duedate {
   border: 1px solid #e9e9e9;
   padding: 14px 6px;
-  max-width: 100px;
+  max-width: 64px;
+  height: 100%;
   color: #646464;
 }
 
-.addButton {
+.addListForm__addButton {
   background-color: #3e6f9c;
   color: #ffffff;
   border: none;
@@ -70,17 +82,17 @@ body {
   font-weight: bold;
   padding: 14px 8px;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
-  min-width: 64px;
+  width: 64px;
 }
 
-.todoListBox {
+.todoLists {
   margin-top: 32px;
   list-style: none;
-  height: 80%;
+  height: 64%;
   overflow-y: auto;
 }
 
-.todoList {
+.todoList__item {
   display: grid;
   grid-template-columns: 32px 1fr;
   grid-template-rows: 1fr auto;
@@ -93,29 +105,28 @@ body {
   border-bottom: 1px solid #e1e1e1;
 }
 
-.todoList .checkbox {
+.todoList__item .checkbox {
   margin-right: 8px;
   width: 32px;
   height: 32px;
   border-radius: 2px;
 }
 
-.todoList label {
-  color: #333333;
+.todoList__item label {
   font-size: 14px;
   font-weight: bold;
   line-height: 1.6;
   word-break: break-all;
 }
 
-.todoList span {
+.todoList__item span {
   color: #808080;
   font-size: 12px;
   grid-column: 2/2;
   grid-row: 2/2;
 }
 
-.todoList span.overdue {
+.todoList__item span.overdue {
   color: red;
 }
 
@@ -148,7 +159,20 @@ body {
   transform: rotate(45deg);
 }
 
-.resetButton {
+.footer {
+  background-color: #9ccdfb;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 8px 16px;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 72px;
+}
+
+.footer__resetButton {
   background-color: #202020;
   padding:  12px;
   color: white;
@@ -156,26 +180,17 @@ body {
   border-radius: 4px;
 }
 
-.footer {
-  background-color: #9ccdfb;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 8px 16px;
-}
-
 .footer__showButton {
   display: flex;
   align-items: center;
 }
 
-.showFinishedItemLabel {
+.footer__showFinishedItemLabel {
   font-weight: bold;
-  color: #333333;
   font-size: 14px;
 }
 
-.showFinishedItemButton {
+.footer__showFinishedItemButton {
   margin-left: 8px;
   width: 24px;
   height: 24px;
