--- a/03_todoApp/src/css/style.css
+++ b/03_todoApp/src/css/style.css
@@ -22,15 +22,14 @@ body {
   top: 0;
   left: 0;
   width: 100%;
+  z-index: 1;
 }
 
 .container {
   padding-inline: 16px;
   padding-top: 72px;
   padding-bottom: 72px;
-  margin-top: 32px;
   height: 100vh;
-  overflow-y: hidden;
 }
 
 .title {
@@ -92,7 +91,7 @@ body {
 .todoLists {
   margin-top: 32px;
   list-style: none;
-  height: 64%;
+  height: calc(100% - 160px);
   overflow-y: auto;
 }
 
@@ -174,6 +173,7 @@ body {
   left: 0;
   width: 100%;
   height: 72px;
+  z-index: 1;
 }
 
 .footer__resetButton {
