--- a/03_todoApp/src/css/style.css
+++ b/03_todoApp/src/css/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: "helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   color: #333333;
+  position: relative;
 }
 
 .wrapper {
