--- a/03_todoApp/src/css/style.css
+++ b/03_todoApp/src/css/style.css
@@ -14,7 +14,6 @@ body {
   width: 100%;
   background-color: white;
   position: relative;
-  overflow-y: hidden;
 }
 
 .header {
@@ -25,13 +24,13 @@ body {
   left: 0;
   width: 100%;
   z-index: 1;
+  opacity: 0.7;
 }
 
 .container {
   padding-inline: 16px;
-  padding-top: 72px;
-  padding-bottom: 72px;
-  height: 100vh;
+  padding-top: 88px;
+  padding-bottom: 88px;
 }
 
 .title {
@@ -93,8 +92,6 @@ body {
 .todoLists {
   margin-top: 32px;
   list-style: none;
-  height: calc(100% - 160px);
-  overflow-y: auto;
 }
 
 .todoList__item {
@@ -176,6 +173,7 @@ body {
   width: 100%;
   height: 72px;
   z-index: 1;
+  opacity: 0.7;
 }
 
 .footer__resetButton {
