--- a/03_todoApp/src/css/style.css
+++ b/03_todoApp/src/css/style.css
@@ -77,7 +77,7 @@ body {
   color: #646464;
 }
 
-.addListForm__addButton {
+.addListForm__addNewListButton {
   background-color: #3e6f9c;
   color: #ffffff;
   border: none;
